--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,38 @@
 /*  your css code here. If applicable */
+body {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+      background-color: #f4f4f4;
+      font-family: Arial, sans-serif;
+    }
+.container{
+	   width: 300px;
+      padding: 20px;
+      border: 2px solid #ccc;
+      border-radius: 10px;
+      text-align: center;
+      background-color: #fff;
+}
+
+.circle{
+	 display: inline-block;
+      width: 50px;
+      height: 50px;
+      margin: 10px;
+      border-radius: 50%;
+}
+
+.red {
+      background-color: red;
+    }
+
+    .green {
+      background-color: green;
+    }
+
+    .yellow {
+      background-color: yellow;
+    }
